--- a/RetrofitTest/app/src/main/res/layout/activity_main.xml
+++ b/RetrofitTest/app/src/main/res/layout/activity_main.xml
@@ -7,9 +7,10 @@
     tools:context="com.example.jestina.retrofitex.view.MainActivity">
 
     <TextView
+        android:id="@+id/activity_main_txv_retrofit_response"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
