--- a/MpAndroidChart/app/src/main/res/layout/activity_main.xml
+++ b/MpAndroidChart/app/src/main/res/layout/activity_main.xml
@@ -9,12 +9,14 @@
     <com.github.mikephil.charting.charts.BarChart
         android:id="@+id/activity_main_chart"
 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
 
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+
+        android:layout_margin="20dp"/>
 
 </android.support.constraint.ConstraintLayout>
