--- a/MpAndroidChart/app/src/main/res/layout/activity_main.xml
+++ b/MpAndroidChart/app/src/main/res/layout/activity_main.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.jestina.mpandroidchart.view.MainActivity">
 
-    <com.github.mikephil.charting.charts.BarChart
-        android:id="@+id/activity_main_chart"
 
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+    <Button
+        android:id="@+id/activity_main_btn_go_bar_chart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
 
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
 
-        android:layout_margin="20dp"/>
+        android:text="2차원 막대 그래프"/>
 
 </android.support.constraint.ConstraintLayout>
