--- a/MpAndroidChart/app/src/main/res/layout/activity_main.xml
+++ b/MpAndroidChart/app/src/main/res/layout/activity_main.xml
@@ -14,10 +14,22 @@
         android:layout_height="wrap_content"
 
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/activity_main_btn_go_pie_chart"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
 
         android:text="2차원 막대 그래프"/>
+
+    <Button
+        android:id="@+id/activity_main_btn_go_pie_chart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        app:layout_constraintTop_toBottomOf="@id/activity_main_btn_go_bar_chart"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+
+        android:text="원형 그래프"/>
 
 </android.support.constraint.ConstraintLayout>
