--- a/LeftSlidingMenu/app/src/main/res/layout/content_main.xml
+++ b/LeftSlidingMenu/app/src/main/res/layout/content_main.xml
@@ -10,6 +10,7 @@
     tools:showIn="@layout/app_bar_main">
 
     <TextView
+        android:id="@+id/main_txv_hello"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
