--- a/ScrollingActivity/app/src/main/res/layout/activity_scrolling.xml
+++ b/ScrollingActivity/app/src/main/res/layout/activity_scrolling.xml
@@ -20,7 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
-            app:contentScrim="@drawable/ui"
+            app:contentScrim="#ff0000"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:toolbarId="@+id/toolbar">
 
