--- a/moveIntro/app/src/main/res/layout/activity_main.xml
+++ b/moveIntro/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,10 @@
     android:layout_height="match_parent"
     tools:context="com.example.jestina.moveintro.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <android.support.v7.widget.AppCompatImageView
+        android:id="@+id/main_imv_images"
+        android:layout_width="1000dp"
+        android:layout_height="match_parent"
 
+        android:src="@drawable/image"/>
 </android.support.constraint.ConstraintLayout>
