--- a/moveIntro/app/src/main/res/layout/activity_main.xml
+++ b/moveIntro/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.jestina.moveintro.MainActivity">
 
-    <android.support.v7.widget.AppCompatImageView
-        android:id="@+id/main_imv_images"
-        android:layout_width="1000dp"
-        android:layout_height="match_parent"
+        <ImageView
+            android:id="@+id/main_imv_images"
 
-        android:src="@drawable/image"/>
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+
+            android:adjustViewBounds="false"
+
+            android:scaleType="fitStart"
+
+            app:layout_constraintDimensionRatio="H,1:1"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+        <ImageView
+            android:id="@+id/main_imv_logo"
+
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+
+            android:layout_gravity="center"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
 </android.support.constraint.ConstraintLayout>
