--- a/moveIntro/app/src/main/res/anim/left_to_right.xml
+++ b/moveIntro/app/src/main/res/anim/left_to_right.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android">
+<set
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:fillAfter="true">
     <translate
         android:duration="7000"
         android:fromXDelta="0%"
-        android:toXDelta="-10%">
+        android:toXDelta="-7%">
 
     </translate>
 </set>
