--- a/MyERP/app/src/main/res/layout/content_main.xml
+++ b/MyERP/app/src/main/res/layout/content_main.xml
@@ -8,13 +8,12 @@
     tools:context="com.example.jestina.myerp.view.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <FrameLayout
+        android:id="@+id/flo_container"
+
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+
+        android:layout_margin="10dp"/>
 
 </android.support.constraint.ConstraintLayout>
