--- a/moveIntro/app/src/main/res/layout/activity_main.xml
+++ b/moveIntro/app/src/main/res/layout/activity_main.xml
@@ -13,14 +13,14 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
 
-            android:adjustViewBounds="false"
-
             android:scaleType="fitStart"
 
             app:layout_constraintDimensionRatio="H,1:1"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintBottom_toBottomOf="parent"
+
+            android:src="@drawable/img"/>
 
         <ImageView
             android:id="@+id/main_imv_logo"
