--- a/moveIntro/app/src/main/res/layout/activity_main.xml
+++ b/moveIntro/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,8 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
 
-            android:scaleType="fitStart"
+            android:adjustViewBounds="true"
+            android:scaleType="fitXY"
 
             app:layout_constraintDimensionRatio="H,1:1"
             app:layout_constraintLeft_toLeftOf="parent"
