--- a/moveIntro/app/src/main/res/layout/activity_main.xml
+++ b/moveIntro/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
             android:layout_height="0dp"
 
             android:adjustViewBounds="true"
-            android:scaleType="fitXY"
+            android:scaleType="fitStart"
 
             app:layout_constraintDimensionRatio="H,1:1"
             app:layout_constraintLeft_toLeftOf="parent"
