--- a/moveIntro/app/src/main/res/layout/activity_main.xml
+++ b/moveIntro/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
+    android:id="@+id/clo_const"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -21,7 +22,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
 
-            android:src="@drawable/img"/>
+
+            android:src="@drawable/img_2"/>
 
         <ImageView
             android:id="@+id/main_imv_logo"
